2002-08-07  Narayana Pattipati <narayana.pattipati@wipro.com>

	* src/yelp-reader.c (yelp_reader_start): Made changes to make yelp
          read the cached HTML files. Fixes #85258
	* src/yelp-pregenerate.c: new file. Creates yelp-pregenerate utility
          which pre-generates HTML files from XML files.
	* src/yelp-pregenerate.h: new file
	* src/yelp-reader.h: Added prototype for look_for_html_help_file

2002-08-05  Sander Vesik <sander.vesik@sun.com>
	* stylesheets/yelp-customization.xsl:
	- apply bold formating to guibuttons
	- apply mono formating to commands
	- fix left-margin instead of margin-left
	- relief from table formating quirks
	- leave space after inline media objects

2002-08-05  Mikael Hallendal  <micke@codefactory.se>

	* Release 1.0.2

	* NEWS: updated for 1.0.2

	* configure.in: 
	- Version updated to 1.0.2
	- Requirement on libgnome to 2.0.2
	- Requirement on gtkhtml2 to 1.99.10

2002-08-05  Sander Vesik <sander.vesik@sun.com>
	* src/yelp-db2html.c:
	- include quotes around stylesheet path so its correctly passed in

	* stylesheets/yelp-custom.xsl:
	- move parameterisation of admonition graphics to yelp-customization.xsl

	* stylesheets/yelp-customization.xsl:
	- make <b> create a consistent result
	- make bulleted and numbered list items align consistently

2002-08-04  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-scrollkeeper.c (scrollkeeper_parse_index): 
	- Will probably solve #89431.

2002-08-04  Padraig O'Briain  <padraig.obriain@sun.com>
	
	* src/yelp-reader.c (yelp_reader_start): Fixes #89038
	
2002-08-04  Mikael Hallendal  <micke@codefactory.se>


	* src/yelp-info.c (yelp_info_read_info_dir): 
	- support info files that is named name.gz. Fixes #85324.
	- Remove duplicates.

	* src/yelp-window.c:
	(window_init): don't automatically go to uri "toc:" in history. 
	(yelp_window_new): don't open "toc:", this is now done from
	  yelp_base_new_window 
	(yelp_window_open_uri): goto the uri in history, Fixes #86538.
