@@ -1,3 +1,10 @@
+2002-08-07  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-view-toc.c: 
+	- Removed the GNOME icon in the bottom
+	- Removed the text in the bottom.
+	- Removed the blue sidebar.
+
 2002-08-07  Narayana Pattipati <narayana.pattipati@wipro.com>
 
 	* src/yelp-reader.c (yelp_reader_start): Made changes to make yelp
